# to_do_list

./: .gitignore  LICENSE  Makefile  README.md  app.c  app.py  pyproject.toml  setup.py
include/: options.h  read_file.h
src/: arguments.py  config.py  constants.py  helpers.py  init_parser.py  parser.py  positional_args.py  read_file.c
src/todocli/: app.py  arguments.py  config.py  helpers.py  init_parser.py  positional_args.py
