[project]
name = "todocli"
version = "0.1.0"
description = "A command-line todo list app"
authors = [{ name = "Lysandros Mavropoulos", email = "lysandros.mavropoulos@gmail.com"}]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "tabulate==0.9.0"
]

[project.scripts]
todocli = "todocli.app:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["todocli"]
